// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePageComponent matches snapshot when position arrays are filled 1`] = `
<div
  className="homepage-positions-section-container"
>
  <div
    className="usa-grid-full homepage-positions-section-container-inner padded-main-content"
  >
    <HomePagePositionsSection
      bidList={
        Array [
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2015-08-05",
              "grade": "03",
              "id": 226,
              "position_number": "10035561",
              "post": Object {
                "id": 199,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
              "title": "POLITICAL/ECONOMIC OFFICER",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "approved",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 1,
            "in_panel_date": "2017-12-20",
            "is_priority": true,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "05",
              "id": 1,
              "position_number": "00003026",
              "post": Object {
                "id": 235,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "OFFICE MANAGEMENT (9017)",
              "title": "OMS (COM)",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 2,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "04",
              "id": 84,
              "position_number": "56001600",
              "post": Object {
                "id": 195,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "SECURITY (2501)",
              "title": "SPECIAL AGENT",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
        ]
      }
      favorites={Array []}
      hasErrored={false}
      icon="bolt"
      isLoading={false}
      maxLength="3"
      positions={
        Array [
          Object {
            "id": 3,
          },
        ]
      }
      title="Service Needs Positions"
      toggleBid={[Function]}
      toggleFavorite={[Function]}
      type="serviceNeed"
      useSpinner={false}
      userProfileFavoritePositionHasErrored={false}
      userProfileFavoritePositionIsLoading={false}
      viewMoreLink="/results?is_highlighted=true"
      wrapInLink={true}
    />
    <HomePagePositionsSection
      bidList={
        Array [
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2015-08-05",
              "grade": "03",
              "id": 226,
              "position_number": "10035561",
              "post": Object {
                "id": 199,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
              "title": "POLITICAL/ECONOMIC OFFICER",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "approved",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 1,
            "in_panel_date": "2017-12-20",
            "is_priority": true,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "05",
              "id": 1,
              "position_number": "00003026",
              "post": Object {
                "id": 235,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "OFFICE MANAGEMENT (9017)",
              "title": "OMS (COM)",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 2,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "04",
              "id": 84,
              "position_number": "56001600",
              "post": Object {
                "id": 195,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "SECURITY (2501)",
              "title": "SPECIAL AGENT",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
        ]
      }
      favorites={Array []}
      hasErrored={false}
      icon="briefcase"
      isLoading={false}
      maxLength="3"
      positions={
        Array [
          Object {
            "id": 1,
            "skill": "skill 1",
          },
        ]
      }
      title="Positions in skill 1"
      toggleBid={[Function]}
      toggleFavorite={[Function]}
      type="default"
      useSpinner={false}
      userProfileFavoritePositionHasErrored={false}
      userProfileFavoritePositionIsLoading={false}
      viewMoreLink="/results?skill__code__in=,"
      wrapInLink={true}
    />
    <HomePagePositionsSection
      bidList={
        Array [
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2015-08-05",
              "grade": "03",
              "id": 226,
              "position_number": "10035561",
              "post": Object {
                "id": 199,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
              "title": "POLITICAL/ECONOMIC OFFICER",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "approved",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 1,
            "in_panel_date": "2017-12-20",
            "is_priority": true,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "05",
              "id": 1,
              "position_number": "00003026",
              "post": Object {
                "id": 235,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "OFFICE MANAGEMENT (9017)",
              "title": "OMS (COM)",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 2,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "04",
              "id": 84,
              "position_number": "56001600",
              "post": Object {
                "id": 195,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "SECURITY (2501)",
              "title": "SPECIAL AGENT",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
        ]
      }
      favorites={Array []}
      hasErrored={false}
      icon="flag"
      isLoading={false}
      maxLength="3"
      positions={
        Array [
          Object {
            "grade": "03",
            "id": 2,
          },
        ]
      }
      title="Recently Posted Positions in Grade 03"
      toggleBid={[Function]}
      toggleFavorite={[Function]}
      type="default"
      useSpinner={false}
      userProfileFavoritePositionHasErrored={false}
      userProfileFavoritePositionIsLoading={false}
      viewMoreLink="/results?grade__code__in=03&ordering=-posted_date"
      wrapInLink={true}
    />
  </div>
</div>
`;

exports[`HomePageComponent matches snapshot when the positions arrays are empty 1`] = `
<div
  className="homepage-positions-section-container"
>
  <div
    className="usa-grid-full homepage-positions-section-container-inner padded-main-content"
  >
    <HomePagePositionsSection
      bidList={
        Array [
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2015-08-05",
              "grade": "03",
              "id": 226,
              "position_number": "10035561",
              "post": Object {
                "id": 199,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
              "title": "POLITICAL/ECONOMIC OFFICER",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "approved",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 1,
            "in_panel_date": "2017-12-20",
            "is_priority": true,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "05",
              "id": 1,
              "position_number": "00003026",
              "post": Object {
                "id": 235,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "OFFICE MANAGEMENT (9017)",
              "title": "OMS (COM)",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 2,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "04",
              "id": 84,
              "position_number": "56001600",
              "post": Object {
                "id": 195,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "SECURITY (2501)",
              "title": "SPECIAL AGENT",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
        ]
      }
      favorites={Array []}
      hasErrored={false}
      icon="bolt"
      isLoading={false}
      maxLength="3"
      positions={Array []}
      title="Service Needs Positions"
      toggleBid={[Function]}
      toggleFavorite={[Function]}
      type="serviceNeed"
      useSpinner={false}
      userProfileFavoritePositionHasErrored={false}
      userProfileFavoritePositionIsLoading={false}
      viewMoreLink="/results?is_highlighted=true"
      wrapInLink={true}
    />
    <HomePagePositionsSection
      bidList={
        Array [
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2015-08-05",
              "grade": "03",
              "id": 226,
              "position_number": "10035561",
              "post": Object {
                "id": 199,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
              "title": "POLITICAL/ECONOMIC OFFICER",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "approved",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 1,
            "in_panel_date": "2017-12-20",
            "is_priority": true,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "05",
              "id": 1,
              "position_number": "00003026",
              "post": Object {
                "id": 235,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "OFFICE MANAGEMENT (9017)",
              "title": "OMS (COM)",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 2,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "04",
              "id": 84,
              "position_number": "56001600",
              "post": Object {
                "id": 195,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "SECURITY (2501)",
              "title": "SPECIAL AGENT",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
        ]
      }
      favorites={Array []}
      hasErrored={false}
      icon="briefcase"
      isLoading={false}
      maxLength="3"
      positions={Array []}
      title="Positions in Skills"
      toggleBid={[Function]}
      toggleFavorite={[Function]}
      type="default"
      useSpinner={false}
      userProfileFavoritePositionHasErrored={false}
      userProfileFavoritePositionIsLoading={false}
      viewMoreLink="/results"
      wrapInLink={true}
    />
    <HomePagePositionsSection
      bidList={
        Array [
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2015-08-05",
              "grade": "03",
              "id": 226,
              "position_number": "10035561",
              "post": Object {
                "id": 199,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
              "title": "POLITICAL/ECONOMIC OFFICER",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "approved",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 1,
            "in_panel_date": "2017-12-20",
            "is_priority": true,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "05",
              "id": 1,
              "position_number": "00003026",
              "post": Object {
                "id": 235,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "OFFICE MANAGEMENT (9017)",
              "title": "OMS (COM)",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
          Object {
            "approved_date": "2017-12-20",
            "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 2,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position": Object {
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "create_date": "2006-09-20",
              "grade": "04",
              "id": 84,
              "position_number": "56001600",
              "post": Object {
                "id": 195,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
              },
              "skill": "SECURITY (2501)",
              "title": "SPECIAL AGENT",
              "update_date": "2017-06-08",
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "closed",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          },
        ]
      }
      favorites={Array []}
      hasErrored={false}
      icon="flag"
      isLoading={false}
      maxLength="3"
      positions={Array []}
      title="Recently Posted Positions in Grade 03"
      toggleBid={[Function]}
      toggleFavorite={[Function]}
      type="default"
      useSpinner={false}
      userProfileFavoritePositionHasErrored={false}
      userProfileFavoritePositionIsLoading={false}
      viewMoreLink="/results?grade__code__in=03&ordering=-posted_date"
      wrapInLink={true}
    />
  </div>
</div>
`;
